5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4385/executions/1596_1446.log
== TEST (2019-03-26 18:35:58) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
qtd_litros =input()
qtd_de_michael = 1/3 * qtd_litros

a = round(quantidade_de,  3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    qtd_de_michael = 1/3 * qtd_litros
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:35:59) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
qtd_litros =input()
qtd_de_michael = 1/3 * qtd_litros

a = round(quantidade_de,  3)
-- EXECUTION TIME:
0.164162
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/1446/main.py", line 5, in <module>
    qtd_de_michael = 1/3 * qtd_litros
TypeError: can't multiply sequence by non-int of type 'float'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:36:02) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
qtd_litros =input()
qtd_de_michael = 1/3 * qtd_litros

a = round(quantidade_de,  3)
-- EXECUTION TIME:
0.172265
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/1446/main.py", line 5, in <module>
    qtd_de_michael = 1/3 * qtd_litros
TypeError: can't multiply sequence by non-int of type 'float'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:36:05) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
qtd_litros =input()
qtd_de_michael = 1/3 * qtd_litros

a = round(quantidade_de,  3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    qtd_de_michael = 1/3 * qtd_litros
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:36:10) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
qtd_litros =input()
qtd_de_michael = 1/3 * qtd_litros

a = round(quantidade_de,  3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    qtd_de_michael = 1/3 * qtd_litros
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:36:11) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
qtd_litros =input()
qtd_de_michael = 1/3 * qtd_litros

a = round(quantidade_de,  3)
-- EXECUTION TIME:
0.185438
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/1446/main.py", line 5, in <module>
    qtd_de_michael = 1/3 * qtd_litros
TypeError: can't multiply sequence by non-int of type 'float'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:36:19) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
qtd_litros =input()
qtd_de_michael = 1/3 * qtd_litros

a = round(quantidade_de,  3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    qtd_de_michael = 1/3 * qtd_litros
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:37:00) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
qtd_litros = float(input())
qtd_de_michael = 1/3 * qtd_litros

a = round(quantidade_de,  3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    a = round(quantidade_de,  3)
NameError: name 'quantidade_de' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:37:04) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
qtd_litros = float(input())
qtd_de_michael = 1/3 * qtd_litros

a = round(quantidade_de,  3)
-- EXECUTION TIME:
0.166393
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/1446/main.py", line 7, in <module>
    a = round(quantidade_de,  3)
NameError: name 'quantidade_de' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:37:05) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
qtd_litros = float(input())
qtd_de_michael = 1/3 * qtd_litros

a = round(quantidade_de,  3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    a = round(quantidade_de,  3)
NameError: name 'quantidade_de' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:37:48) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
qtd_litros = float(input())
qtd_de_michael = 1/3 * qtd_litros

a = round(quantidade_de_michael,  3)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    a = round(quantidade_de_michael,  3)
NameError: name 'quantidade_de_michael' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:37:52) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
qtd_litros = float(input())
qtd_de_michael = 1/3 * qtd_litros

a = round(quantidade_de_michael,  3)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    a = round(quantidade_de_michael,  3)
NameError: name 'quantidade_de_michael' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:37:54) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
qtd_litros = float(input())
qtd_de_michael = 1/3 * qtd_litros

a = round(quantidade_de_michael,  3)
print(a)
-- EXECUTION TIME:
0.221278
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/1446/main.py", line 7, in <module>
    a = round(quantidade_de_michael,  3)
NameError: name 'quantidade_de_michael' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:37:55) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
qtd_litros = float(input())
qtd_de_michael = 1/3 * qtd_litros

a = round(quantidade_de_michael,  3)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    a = round(quantidade_de_michael,  3)
NameError: name 'quantidade_de_michael' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:38:22) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
qtd_litros = float(input())
qtd_de_michael = 1/3 * qtd_litros

a = round(quantidade_de_michael,  3)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    a = round(quantidade_de_michael,  3)
NameError: name 'quantidade_de_michael' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:38:24) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
qtd_litros = float(input())
qtd_de_michael = 1/3 * qtd_litros

a = round(quantidade_de_michael,  3)
print(a)
-- EXECUTION TIME:
0.246696
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/1446/main.py", line 7, in <module>
    a = round(quantidade_de_michael,  3)
NameError: name 'quantidade_de_michael' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:38:40) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
qtd_litros = float(input())
qtd_de_michael = 1/3 * qtd_litros

a = round(qtd_de_michael,  3)
print(a)
-- OUTPUT:
2.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:38:47) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
qtd_litros = float(input())
qtd_de_michael = 1/3 * qtd_litros

a = round(qtd_de_michael,  3)
print(a)
-- EXECUTION TIME:
0.14118
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
2.333
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
6.667
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
5.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
